# stera_task_stl

./: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  sterragiven.cpp  sterragiven.h
